--- a/common.yaml
+++ b/common.yaml
@@ -1,7 +1,7 @@
 ---
 - name: install initial packages on all boxes
   hosts: all 
-#   remote_user: ec2-user
+  remote_user: ec2-user
   become: true
   become_method: sudo
   tasks:
