--- a/common.yaml
+++ b/common.yaml
@@ -7,6 +7,9 @@
   - name: Find out User
     shell:
       cmd: whoami
+    register: result
+    - debug:
+        var: result
 
 - name: install initial packages on all boxes
   hosts: all 
