--- a/common.yaml
+++ b/common.yaml
@@ -16,6 +16,7 @@
   remote_user: ec2-user
   become: true
   become_method: sudo
+  ignore_errors: true
   tasks:
  
   - name: changing selinux status TEMP
